# shimadzu_raster

./: .gitignore  README.md  linear_ma_acc.rst  pyproject.toml
src/shimadzu_raster/: __init__.py  parser.py
tests/: test_parser.py
